# Callback_API

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: db.py  models.py  routes.py  schemas.py
config/: logging_config.py  schemas.py  settings.py
service_client/: .env  .env_example  Dockerfile  main.py
service_client/src/: kafka_client.py
service_client/src/config/: jwt_config_for_client.py  logger_config.py  settings.py  settings_for_client.py
service_main/: .env_example  Dockerfile  alembic.ini  main.py
service_main/src/: db.py  kafka_client.py  models.py  schemas.py
service_main/src/config/: jwt_config.py  logging_config.py  settings.py  settings_for_main.py
service_main/src/routes/: routes.py
service_main/src/utils/: auth.py
